--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prisma:generate": "prisma generate",
     "prisma:db:push": "prisma db push",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "vercel-build": "prisma generate && prisma db push && next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
